// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a CTABanner correctly when invalid icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 16px 0;
  font-size: 13px;
  background-color: #E1F7FF;
  border: 1px solid #C3E7FE;
  color: #083C90;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  margin: 24px 0px;
  min-height: 44px;
  padding: 9px 12px 9px 20px;
  position: relative;
  cursor: pointer;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0 p,
.emotion-0 a {
  font-size: 13px;
}

.emotion-0 a:hover {
  text-underline-offset: 3px;
}

.dark-theme .emotion-0 {
  background-color: #0C2657;
  border: 1px solid #083C90;
  color: #C3E7FE;
}

.emotion-0>p {
  margin-left: 15px;
}

.emotion-1 {
  width: 26px;
  min-width: 26px;
  height: 26px;
  background-color: #C3E7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #016BF8;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-2 {
  color: #016BF8;
}

.emotion-3 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-3 strong,
.emotion-3 b {
  font-weight: 700;
}

.emotion-4 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus {
  text-decoration-color: #016BF8;
}

.emotion-4>span>code,
.emotion-4>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-label="Play Icon"
        class="emotion-2"
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.779 6.704a1.5 1.5 0 0 1 0 2.592l-7.523 4.388A1.5 1.5 0 0 1 4 12.388V3.612a1.5 1.5 0 0 1 2.256-1.296l7.523 4.388Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <p
      class="emotion-3"
    >
      If you prefer learning through videos, try this lesson on 
      <a
        class="lg-ui-0001 emotion-4"
        href="https://university.mongodb.com/"
        target="_self"
      >
        <span>
          MongoDB University
        </span>
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when lowercase icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 16px 0;
  font-size: 13px;
  background-color: #E1F7FF;
  border: 1px solid #C3E7FE;
  color: #083C90;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  margin: 24px 0px;
  min-height: 44px;
  padding: 9px 12px 9px 20px;
  position: relative;
  cursor: pointer;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0 p,
.emotion-0 a {
  font-size: 13px;
}

.emotion-0 a:hover {
  text-underline-offset: 3px;
}

.dark-theme .emotion-0 {
  background-color: #0C2657;
  border: 1px solid #083C90;
  color: #C3E7FE;
}

.emotion-0>p {
  margin-left: 15px;
}

.emotion-1 {
  width: 26px;
  min-width: 26px;
  height: 26px;
  background-color: #C3E7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #016BF8;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-2 {
  color: #016BF8;
}

.emotion-3 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-3 strong,
.emotion-3 b {
  font-weight: 700;
}

.emotion-4 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus {
  text-decoration-color: #016BF8;
}

.emotion-4>span>code,
.emotion-4>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-label="Bell Icon"
        class="emotion-2"
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12.625 6.138a4.656 4.656 0 0 0-3.268-3.925C9.228 1.52 8.67 1 8 1c-.67 0-1.228.52-1.357 1.213a4.656 4.656 0 0 0-3.268 3.925l-.452 3.963h.026a.95.95 0 0 0 0 1.899h10.102a.95.95 0 0 0 0-1.899h.026l-.452-3.963ZM8 15a2 2 0 0 1-2-2h4a2 2 0 0 1-2 2Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <p
      class="emotion-3"
    >
      If you prefer learning through videos, try this lesson on 
      <a
        class="lg-ui-0001 emotion-4"
        href="https://university.mongodb.com/"
        target="_self"
      >
        <span>
          MongoDB University
        </span>
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when no icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 16px 0;
  font-size: 13px;
  background-color: #E1F7FF;
  border: 1px solid #C3E7FE;
  color: #083C90;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  margin: 24px 0px;
  min-height: 44px;
  padding: 9px 12px 9px 20px;
  position: relative;
  cursor: pointer;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0 p,
.emotion-0 a {
  font-size: 13px;
}

.emotion-0 a:hover {
  text-underline-offset: 3px;
}

.dark-theme .emotion-0 {
  background-color: #0C2657;
  border: 1px solid #083C90;
  color: #C3E7FE;
}

.emotion-0>p {
  margin-left: 15px;
}

.emotion-1 {
  width: 26px;
  min-width: 26px;
  height: 26px;
  background-color: #C3E7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #016BF8;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-2 {
  color: #016BF8;
}

.emotion-3 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-3 strong,
.emotion-3 b {
  font-weight: 700;
}

.emotion-4 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus {
  text-decoration-color: #016BF8;
}

.emotion-4>span>code,
.emotion-4>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-label="Play Icon"
        class="emotion-2"
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.779 6.704a1.5 1.5 0 0 1 0 2.592l-7.523 4.388A1.5 1.5 0 0 1 4 12.388V3.612a1.5 1.5 0 0 1 2.256-1.296l7.523 4.388Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <p
      class="emotion-3"
    >
      If you prefer learning through videos, try this lesson on 
      <a
        class="lg-ui-0001 emotion-4"
        href="https://university.mongodb.com/"
        target="_self"
      >
        <span>
          MongoDB University
        </span>
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when non-default icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 16px 0;
  font-size: 13px;
  background-color: #E1F7FF;
  border: 1px solid #C3E7FE;
  color: #083C90;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  margin: 24px 0px;
  min-height: 44px;
  padding: 9px 12px 9px 20px;
  position: relative;
  cursor: pointer;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0 p,
.emotion-0 a {
  font-size: 13px;
}

.emotion-0 a:hover {
  text-underline-offset: 3px;
}

.dark-theme .emotion-0 {
  background-color: #0C2657;
  border: 1px solid #083C90;
  color: #C3E7FE;
}

.emotion-0>p {
  margin-left: 15px;
}

.emotion-1 {
  width: 26px;
  min-width: 26px;
  height: 26px;
  background-color: #C3E7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #016BF8;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-2 {
  color: #016BF8;
}

.emotion-3 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-3 strong,
.emotion-3 b {
  font-weight: 700;
}

.emotion-4 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus {
  text-decoration-color: #016BF8;
}

.emotion-4>span>code,
.emotion-4>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-label="University Icon"
        class="emotion-2"
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 4.613c0-.383.191-.74.51-.953a6.87 6.87 0 0 1 2.145-.949l2.406-.601a.353.353 0 0 1 .439.342v7.88c0 .238 0 .357-.043.453a.5.5 0 0 1-.176.211c-.087.06-.204.081-.438.123l-3.9.71c-.324.058-.486.088-.612.042a.5.5 0 0 1-.264-.22c-.067-.116-.067-.28-.067-.61V4.613ZM2 2.452c0-.23.216-.398.439-.342l2.407.601a6.87 6.87 0 0 1 2.144.95c.319.211.51.569.51.952v6.428c0 .33 0 .494-.067.61a.5.5 0 0 1-.264.22c-.126.046-.288.016-.612-.043l-3.9-.709c-.234-.042-.35-.063-.438-.123a.5.5 0 0 1-.176-.21C2 10.688 2 10.57 2 10.331v-7.88ZM2.008 12.41a.5.5 0 0 1 .581-.402l5.143.935c.177.032.359.032.536 0l5.143-.935a.5.5 0 0 1 .178.984l-4.134.752c-.163.434-.753.756-1.455.756-.702 0-1.292-.322-1.455-.756l-4.134-.752a.5.5 0 0 1-.403-.581Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <p
      class="emotion-3"
    >
      If you prefer learning through videos, try this lesson on 
      <a
        class="lg-ui-0001 emotion-4"
        href="https://university.mongodb.com/"
        target="_self"
      >
        <span>
          MongoDB University
        </span>
      </a>
    </p>
  </div>
</DocumentFragment>
`;
